--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@biconomy/account": "^4.4.4",
     "@generationsoftware/hyperstructure-client-js": "^1.12.10",
+    "@types/nodemailer": "^6.4.15",
     "@wagmi/core": "^2.10.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "viem": "^2.12.5"
+    "nodemailer": "^6.9.13",
+    "viem": "^2.13.1"
   }
 }
