--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
+    "tslib": "^2.6.2",
     "viem": "^2.13.1"
   }
 }
